tests/baselines/reference/assignToModule.errors.txt
tests/cases/compiler/assignToModule.ts(2,1): error TS2708: Cannot use namespace 'A' as a value.


==== tests/cases/compiler/assignToModule.ts (1 errors) ====
    module A {}
    A = undefined; // invalid LHS
    ~
!!! error TS2708: Cannot use namespace 'A' as a value.